# Email-app_self_hosted

./: .gitignore  .replit  CLAUDE.md  README.md  docker-compose.yml  i18n_implementation_guide.txt  pyproject.toml  replit.md  start_celery_worker.sh  timezone_implementation_guide.txt
attached_assets/: Pasted--2026-01-30-14-20-40-480-INFO-ForkPoolWorker-2-Non-stri_1769783110268.txt  Pasted--2026-04-03-08-56-44-291-INFO-MainProcess-Task-tasks-ch_1775207093578.txt  Pasted--A-B-Testing-Missing-Duration-Winner-Declaration-Fix-Su_1772859190956.txt  Pasted--ADD-THIS-BLOCK-to-backend-tasks-ab-1772859550937_1772859550938.txt  Pasted--CHANGES-TO-backend-routes-ab-testi-1772859537268_1772859537268.txt  Pasted--SECTION-A-CRITICAL-BUGS--1772776716178_1772776716180.txt  Pasted--ZeniPost-Full-i18n-Migration-Guide-How-the-system-work_1777655492666.txt  Pasted--bugBlock-1-RETRY-BACKOFF-BASE-SECONDS-60000-Retry-dela_1772776878749.txt  Pasted--content-snapshot-id-oid-69c8c7c4420c301efd8dd3c4-title_1775191900835.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1769661092294.txt  Pasted--doctype-html-html-lang-en-head-meta-charset-utf-8-meta_1769783117606.txt  Pasted-2-ABTestWinnerReport-jsx-2-sub-components-need-fixing-M_1777696243115.txt  Pasted-2-ABTestWinnerReport-jsx-2-sub-components-need-fixing-M_1777696384534.txt  Pasted-3-frontend-src-pages-Segmentation-jsx-Add-useSettings-h_1777696127901.txt  Pasted-3-frontend-src-pages-Segmentation-jsx-Add-useSettings-h_1777696423483.txt  Pasted-Campaign-Progress-This-will-only-show-when-campaign-is-_1775191855825.txt  (+5 more)
(+298 files in other folders)
